--- a/power-coders-app/src/Components/Carousel/carousel.css
+++ b/power-coders-app/src/Components/Carousel/carousel.css
@@ -4,31 +4,27 @@
 
 .row {
   display: flex;
+  margin: auto;
+  align-items: center;
 }
 
 .column {
   flex: 50%;
-  padding: 10px;
-}
-.column2 {
-  object-fit: contain;
-  flex: 50%;
-  padding-top: 200px;
-  background-color: var(--main-colour);
-  padding-right: 20px;
-  text-align: justify;
+  margin: auto;
 }
 
-.resourceText {
-  padding-right: 160px;
-  padding-bottom: 30px;
+.column2 {
+  padding-top: 16vh;
+  background-color: var(--main-colour);
+  text-align: left;
+  margin: auto;
+  height: 75vh;
 }
 
 .resourceDescription {
   font-family: "Asap";
   font-size: 1.3vw;
-  line-height: 130%;
-  padding: 5% 5%;
+  margin-right: 9vw;
 }
 
 .resourceH3 {
@@ -37,14 +33,13 @@
 }
 
 .resourceTitle {
-  font-size: 2.5vw;
+  font-size: 2vw;
   text-align: center;
   font-weight: bold;
 }
 
 .resourceImage {
-  padding-left: 160px;
-  padding-top: 60px;
+  margin-left: 9vw;
 }
 
 .resourceLink {
@@ -52,15 +47,16 @@
   background-color: var(--secondary-colour);
   padding: 1% 1%;
   font-size: 1.2rem;
-  border-radius: 50px;
-  width: 60%;
-  margin-left: 10%;
+  border-radius: 30px;
+  width: 20vw;
+  margin: auto;
 }
 
 .resourceLink > a {
   color: #fff;
   text-decoration: none;
 }
+
 .resourceLink:hover {
   transform: scale(105%);
   cursor: pointer;
